# QStaticTemplate

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-build.yml
src/: CMakeLists.txt
src/resources/win/: app.rc.in
tests/: test.cpp
